--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,14 +20,15 @@ jobs:
           version=$(echo "$url" | sed -n 's/.*bcl-convert-\([0-9.]*\)-2.el7.x86_64.rpm/\1/p')
           echo "url=$url" >> "$GITHUB_OUTPUT"
           echo "version=$version" >> "$GITHUB_OUTPUT"
-      - uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Check if image already exists
+      - name: Determine latest built version on DockerHub
+        id: built
+        run: |
+          version=$(python3 get_latest_dockerhub_version.py)
+          echo "version=$version" >> "$GITHUB_OUTPUT"
+      - name: Check if new version is already built
         id: check
         run: |
-          if docker manifest inspect ctbushman/bcl_convert:${{ steps.latest.outputs.version }} > /dev/null 2>&1; then
+          if [ "${{ steps.latest.outputs.version }}" = "${{ steps.built.outputs.version }}" ]; then
             echo "exists=true" >> "$GITHUB_OUTPUT"
           else
             echo "exists=false" >> "$GITHUB_OUTPUT"
